[package]
name = "axtend"
authors = ["PureStake"]
description = "Axtend Collator"
edition = "2018"
homepage = "https://axtend.network"
license = "GPL-3.0-only"
version = "0.12.3"

[[bin]]
name = 'axtend'
path = 'src/main.rs'

[dependencies]
futures = { version = "0.3.1", features = ["compat"] }

axtend-cli = { path = "cli", default-features = false }
axtend-service = { path = "service", default-features = false }

[dev-dependencies]
assert_cmd = "0.12"
hex = "0.4.3"
nix = "0.17"
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.2.0"

# Benchmarking
pallet-xcm = { git = "https://github.com/axia-tech/axia", branch = "axia" }
xcm-builder = { git = "https://github.com/axia-tech/axia", branch = "axia" }

[features]
default = ["moonbase-native", "axtend-native", "moonriver-native"]

axctest-native = ["axtend-service/axctest-native"]
betanet-native = ["axtend-service/betanet-native"]
alphanet-native = [
	"axtend-cli/alphanet-native",
	"axtend-service/alphanet-native",
]

moonbase-native = [
	"axtend-cli/moonbase-native",
	"axtend-service/moonbase-native",
]
axtend-native = [
	"axtend-cli/axtend-native",
	"axtend-service/axtend-native",
]
moonriver-native = [
	"axtend-cli/moonriver-native",
	"axtend-service/moonriver-native",
]

test-spec = []

runtime-benchmarks = [
	"axtend-cli/runtime-benchmarks",
	"pallet-xcm/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
]

moonbase-runtime-benchmarks = [
	"axtend-cli/moonbase-runtime-benchmarks",
	"pallet-xcm/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
]
