[package]
name = "perf-test"
authors = ["PureStake"]
description = "Axtend Performance Tests"
edition = "2018"
version = "0.1.0"

[dependencies]
async-io = "1.3"
clap = { version = "3.1", features = ["derive"] }
cli-table = "0.4"
futures = { version = "0.3.1", features = ["compat"] }
hex = "0.4.3"
libsecp256k1 = { version = "0.5" }
log = "0.4.8"
num_cpus = "1.13.0"
psutil = "3.2.1"
raw-cpuid = "10.2.0"
rlp = { version = "0.5" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = { version = "0.8" }

# Axtend

cli-opt = { package = "axtend-cli-opt", path = "../cli-opt", default-features = false }
# TODO: handle different runtime builds
moonbase-runtime = { path = "../../runtime/moonbase" }
service = { package = "axtend-service", path = "../service", default-features = false }

# Substrate
sc-basic-authorship = { git = "https://github.com/axia-tech/axlib", branch = "axlib" }
sc-cli = { git = "https://github.com/axia-tech/axlib", branch = "axlib" }
sc-client-api = { git = "https://github.com/axia-tech/axlib", branch = "axlib" }
sc-client-db = { git = "https://github.com/axia-tech/axlib", branch = "axlib" }
sc-consensus-manual-seal = { git = "https://github.com/axia-tech/axlib", branch = "axlib" }
sc-executor = { git = "https://github.com/axia-tech/axlib", branch = "axlib" }
sc-rpc = { git = "https://github.com/axia-tech/axlib", branch = "axlib" }
sc-service = { git = "https://github.com/axia-tech/axlib", branch = "axlib" }
sc-transaction-pool = { git = "https://github.com/axia-tech/axlib", branch = "axlib" }
sp-api = { git = "https://github.com/axia-tech/axlib", branch = "axlib" }
sp-core = { git = "https://github.com/axia-tech/axlib", branch = "axlib" }
sp-externalities = { git = "https://github.com/axia-tech/axlib", branch = "axlib" }
sp-keystore = { git = "https://github.com/axia-tech/axlib", branch = "axlib" }
sp-runtime = { git = "https://github.com/axia-tech/axlib", branch = "axlib" }
sp-state-machine = { git = "https://github.com/axia-tech/axlib", branch = "axlib" }
sp-timestamp = { git = "https://github.com/axia-tech/axlib", branch = "axlib" }

# Frontier
ethereum = { version = "0.11.1" }
fc-consensus = { git = "https://github.com/axia-tech/frontier", branch = "frontier" }
fc-rpc = { git = "https://github.com/axia-tech/frontier", branch = "frontier" }
fp-evm = { git = "https://github.com/axia-tech/frontier", branch = "frontier" }
fp-rpc = { git = "https://github.com/axia-tech/frontier", branch = "frontier" }
pallet-ethereum = { git = "https://github.com/axia-tech/frontier", branch = "frontier" }

# Cumulus / Nimbus
cumulus-primitives-allychain-inherent = { git = "https://github.com/axia-tech/cumulus", branch = "cumulus" }
nimbus-primitives = { git = "https://github.com/axia-tech/nimbus", branch = "nimbus" }
