[package]
name = "allychain-staking"
authors = ["PureStake"]
description = "allychain staking pallet for collator selection and reward distribution"
edition = "2018"
version = "3.0.0"

[dependencies]
log = "0.4"
serde = { version = "1.0.101", optional = true }

# Substrate
frame-benchmarking = { git = "https://github.com/axia-tech/axlib", branch = "axlib", optional = true, default-features = false }
frame-support = { git = "https://github.com/axia-tech/axlib", branch = "axlib", default-features = false }
frame-system = { git = "https://github.com/axia-tech/axlib", branch = "axlib", default-features = false }
parity-scale-codec = { version = "2.2", default-features = false, features = [
	"derive",
] }
scale-info = { version = "1.0", default-features = false, features = [
	"derive",
] }
sp-runtime = { git = "https://github.com/axia-tech/axlib", branch = "axlib", default-features = false }
sp-std = { git = "https://github.com/axia-tech/axlib", branch = "axlib", default-features = false }
substrate-fixed = { git = "https://github.com/axia-tech/axlib-fixed", default-features = false, branch = "axlibfixed" }

# Nimbus
nimbus-primitives = { git = "https://github.com/axia-tech/nimbus", branch = "nimbus", default-features = false }

[dev-dependencies]
similar-asserts = "1.1.0"

pallet-balances = { git = "https://github.com/axia-tech/axlib", branch = "axlib" }
sp-core = { git = "https://github.com/axia-tech/axlib", branch = "axlib" }
sp-io = { git = "https://github.com/axia-tech/axlib", branch = "axlib" }

[features]
default = ["std"]
std = [
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"nimbus-primitives/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"serde",
	"sp-runtime/std",
	"sp-std/std",
]
runtime-benchmarks = ["frame-benchmarking"]
try-runtime = ["frame-support/try-runtime"]
