[package]
name = "runtime-common"
authors = ["PureStake"]
description = "Common code shared between runtimes"
edition = "2018"
homepage = "https://axtend.network"
license = "GPL-3.0-only"
version = "0.8.0-dev"

[dependencies]
impl-trait-for-tuples = "0.2.1"
log = "0.4"

# Axtend
pallet-asset-manager = { path = "../../pallets/asset-manager", optional = true, default-features = false }
pallet-author-mapping = { path = "../../pallets/author-mapping", default-features = false }
pallet-migrations = { path = "../../pallets/migrations", default-features = false }
allychain-staking = { path = "../../pallets/allychain-staking", default-features = false }
xcm-transactor = { path = "../../pallets/xcm-transactor", optional = true, default-features = false }

# Substrate
frame-support = { git = "https://github.com/axia-tech/axlib", branch = "axlib", default-features = false }
frame-system = { git = "https://github.com/axia-tech/axlib", branch = "axlib", default-features = false }
pallet-collective = { git = "https://github.com/axia-tech/axlib", branch = "axlib", default-features = false }
pallet-scheduler = { git = "https://github.com/axia-tech/axlib", branch = "axlib", default-features = false }
sp-core = { git = "https://github.com/axia-tech/axlib", branch = "axlib", default-features = false }
sp-runtime = { git = "https://github.com/axia-tech/axlib", branch = "axlib", default-features = false }
sp-std = { git = "https://github.com/axia-tech/axlib", branch = "axlib", default-features = false }

# Frontier
pallet-base-fee = { git = "https://github.com/axia-tech/frontier", branch = "frontier", default-features = false }
pallet-evm = { git = "https://github.com/axia-tech/frontier", branch = "frontier", default-features = false }

# Axia
xcm = { git = "https://github.com/axia-tech/axia", branch = "axia", optional = true, default-features = false }

[features]
std = [
	"frame-support/std",
	"pallet-asset-manager/std",
	"pallet-author-mapping/std",
	"pallet-base-fee/std",
	"pallet-evm/std",
	"pallet-migrations/std",
	"pallet-scheduler/std",
	"allychain-staking/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
	"xcm-transactor/std",
	"xcm/std",
]
try-runtime = ["frame-support/try-runtime", "pallet-migrations/try-runtime"]
xcm-support = ["pallet-asset-manager", "xcm", "xcm-transactor"]
