[package]
name = "axtend-evm-tracer"
authors = ["PureStake"]
edition = "2018"
homepage = "https://axtend.network"
license = "GPL-3.0-only"
repository = "https://github.com/PureStake/axtend/"
version = "0.1.0"

[dependencies]

# Axtend
evm-tracing-events = { path = "../../primitives/rpc/evm-tracing-events", default-features = false, features = [
	"evm-tracing",
] }
axtend-primitives-ext = { path = "../../primitives/ext", default-features = false }

# Substrate
codec = { package = "parity-scale-codec", version = "2.2", default-features = false }
sp-core = { git = "https://github.com/axia-tech/axlib", branch = "axlib", default-features = false }
sp-io = { git = "https://github.com/axia-tech/axlib", branch = "axlib", default-features = false }
sp-runtime = { git = "https://github.com/axia-tech/axlib", branch = "axlib", default-features = false }
sp-std = { git = "https://github.com/axia-tech/axlib", branch = "axlib", default-features = false }

# Frontier
ethereum-types = { version = "0.12.1", default-features = false }
evm = { version = "0.33.1", default-features = false, features = [
	"with-codec",
] }
evm-gasometer = { version = "0.33.0", default-features = false }
evm-runtime = { version = "0.33.0", default-features = false }
fp-evm = { git = "https://github.com/axia-tech/frontier", branch = "frontier", default-features = false }
pallet-evm = { git = "https://github.com/axia-tech/frontier", branch = "frontier", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"ethereum-types/std",
	"evm-gasometer/std",
	"evm-runtime/std",
	"evm-tracing-events/std",
	"evm/std",
	"evm/with-serde",
	"fp-evm/std",
	"axtend-primitives-ext/std",
	"pallet-evm/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
]
